workshop/2. backend-rest-api/1_service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: strapi
spec:
  selector:
    app: strapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
