workshop/2. backend-rest-api/3_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-ingress
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: 200m
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    # nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
    # nginx.ingress.kubernetes.io/client-body-buffer-size: "50m"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kubernetesrocks.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spa
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: strapi
                port:
                  number: 80
